--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 </head>
 <body>
     <article>
-     <h1 id="headline">С Днём Святого Валентина Айс)</h1>
-     <p id="text">А ты говоришь тебе никто не дарит валентинок. То ли еще будет! </p>
+     <h1 id="headline">Ну так...</h1>
+     <p id="text">Может переспим ?)</p>
      <button id="shuffler">Твой Хакер</button>
     </article>
     <div id="heart"></div>
