--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <article>
      <h1 id="headline">Ну так...</h1>
      <p id="text">Может переспим ?)</p>
-     <button id="shuffler">Твой Хакер</button>
+     <button id="shuffler">Arriva</button>
     </article>
     <div id="heart"></div>
   <canvas id="c"></canvas>
