--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="shortcut icon" type="image/png" href="https://image.flaticon.com/icons/png/128/148/148836.png"/>
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>С Днём Святого Валентина тебя Айс)</title>
+  <title>Может переспим ?)</title>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <link rel="stylesheet" href="index.css">
   <!-- Global site tag (gtag.js) - Google Analytics -->
